Bug 42970 - Marvell 88SE9172 product/vendor IDs
Summary: Marvell 88SE9172 product/vendor IDs
Status: RESOLVED CODE_FIX
Alias: None
Product: IO/Storage
Classification: Unclassified
Component: Serial ATA (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Alan
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-03-21 11:51 UTC by Karl
Modified: 2012-09-19 22:12 UTC (History)
2 users (show)

See Also:
Kernel Version: 3.2.0-2-amd64 (Debian 3.2.9-1)
Subsystem:
Regression: No
Bisected commit-id:


Attachments

Description Karl 2012-03-21 11:51:15 UTC
Any drives connected to the Marvell 88SE9172 (on a gigabyte GA-HA65M-UD3H-B3 motherboard) do not appear to be recognised by default - it seems that the ahci driver does not recognise the pci vendor/product ID.

Adding the IDs by sysfs and it *seems* to work - 
echo 1b4b 9192 > /sys/bus/pci/drivers/ahci/new_id

It also has a "RAID mode", but I'm pretty sure it's just a form of dmraid.

My apologies if this is logged to the incorrect place, or if I should've gone to my distros kernel team first.
Comment 1 Alan 2012-09-03 16:17:06 UTC
Patch queued.
Comment 2 Florian Mickler 2012-09-19 22:12:32 UTC
A patch referencing this bug report has been merged in Linux v3.6-rc6:

commit 17c60c6b763cb5b83b0185e7d38d01d18e55a05a
Author: Alan Cox <alan@linux.intel.com>
Date:   Tue Sep 4 16:07:18 2012 +0100

    ahci: Add alternate identifier for the 88SE9172

Note You need to log in before you can comment on or make changes to this bug.